adjust padding to .col to fix width overflow problems

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,3 +9,7 @@
 p.extra-height {
   line-height:2
 }
+
+.col {
+  padding:0;
+}
